stay current loc

--- a/learn-certs-pr/azure-ai-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-ai-engineer/renew/index.yml
@@ -18,7 +18,7 @@ skills:
 - Erstellen Sie KI-Konversationslösungen
 - Implementieren Sie Knowledge Mining mit Azure Cognitive Search
 examsPassed:
-- ai-100, ai-102
+- ai-100 oder ai-102
 studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf diese Microsoft-Zertifizierung vorzubereiten: Bewertung der Erneuerung von Azure AI Engineer Associate.'
 resources:
 - title: Über die Erneuerung von Zertifizierungen
