--- a/learn-certs-pr/azure-data-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-data-engineer/renew/index.yml
@@ -14,7 +14,7 @@ skills:
 - Aufnahme im Petabyte-Bereich mit Azure Data Factory
 - Führen Sie mit Azure Data Factory eine codefreie Transformation im Maßstab durch
 examsPassed:
-- dp-200, dp-201, dp-203
+- dp-200, dp-201 oder dp-203
 studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf diese Microsoft-Zertifizierung vorzubereiten: Azure Data Engineer Associate-Erneuerungsbewertung.'
 resources:
 - title: Über die Erneuerung von Zertifizierungen
