stay current loc

--- a/learn-certs-pr/azure-administrator/renew/index.yml
+++ b/learn-certs-pr/azure-administrator/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Erneuerung für Microsoft Certified: Azure Administrator Associate'
 metadata:
   title: 'Erneuerung für Microsoft Certified: Azure Administrator Associate'
