--- a/learn-certs-pr/azure-data-scientist/renew/index.yml
+++ b/learn-certs-pr/azure-data-scientist/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Erneuerung für Microsoft Certified: Azure Data Scientist Associate'
 metadata:
   title: 'Erneuerung für Microsoft Certified: Azure Data Scientist Associate'
