--- a/learn-certs-pr/azure-security-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-security-engineer/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Erneuerung für Microsoft Certified: Azure Security Engineer Associate'
 metadata:
   title: 'Erneuerung für Microsoft Certified: Azure Security Engineer Associate'
