--- a/learn-certs-pr/d365-functional-consultant-manufacturing/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-manufacturing/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:CertificationRenewal
+### YamlMime:CertificationRenewalRenewal
 title: 'Erneuerung für Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
 metadata:
   title: 'Erneuerung für Microsoft Certified: Dynamics 365 Supply Chain Management, Manufacturing Functional Consultant Associate'
