--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Erneuerung für Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate'
 metadata:
   title: 'Erneuerung für Microsoft Certified: Dynamics 365 Supply Chain Management Functional Consultant Associate'
