--- a/learn-certs-pr/m365-enterprise-administrator/renew/index.yml
+++ b/learn-certs-pr/m365-enterprise-administrator/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:Certification
+### YamlMime:CertificationRenewal
 title: 'Erneuerung für Microsoft 365 Certified: Enterprise Administrator Expert'
 metadata:
   title: 'Erneuerung für Microsoft 365 Certified: Enterprise Administrator Expert'
