--- a/learn-certs-pr/azure-ai-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-ai-engineer/renew/index.yml
@@ -1,4 +1,4 @@
-### YamlMime:CertificationRenewalRenewal
+### YamlMime:CertificationRenewal
 title: 'Erneuerung für Microsoft Certified: Azure AI Engineer Associate'
 metadata:
   title: 'Erneuerung für Microsoft Certified: Azure AI Engineer Associate'
