--- a/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
+++ b/learn-certs-pr/d365-fundamentals-customer-engagement-apps-crm/index.yml
@@ -2,29 +2,27 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals Customer Engagement Apps (CRM)'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals Customer Engagement Apps (CRM)'
-  description: 'Diese Zertifizierung wird im Februar 2021 verfügbar sein. Wenn Sie mit Geschäftsabläufen sowie Kundenbeziehungsmanagement (CRM) vertraut sind und über IT-Kenntnisse verfügen – enweder allgemein oder durch Berufserfahrung – nutzen Sie diese Zertifizierung, um diese Fähigkeiten hervorzuheben. Überprüfen Sie, ob Sie die Kundenbindungsfunktionen von Dynamics 365 umfassend kennen, um Ihre Karriere zu fördern. '
+  description: 'Wenn Sie mit Geschäftsabläufen sowie Kundenbeziehungsmanagement (CRM) vertraut sind und über IT-Kenntnisse verfügen – enweder allgemein oder durch Berufserfahrung – nutzen Sie diese Zertifizierung, um diese Fähigkeiten hervorzuheben. Überprüfen Sie, ob Sie die Kundenbindungsfunktionen von Dynamics 365 umfassend kennen, um Ihre Karriere zu fördern.'
 uid: certification.d365-fundamentals-customer-engagement-apps-crm
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
   Wenn Sie mit Geschäftsabläufen sowie Kundenbeziehungsmanagement (CRM) vertraut sind und über IT-Kenntnisse verfügen – enweder allgemein oder durch Berufserfahrung – nutzen Sie diese Zertifizierung, um diese Fähigkeiten hervorzuheben.Überprüfen Sie, ob Sie die Kundenbindungsfunktionen von Dynamics 365 umfassend kennen, um Ihre Karriere zu fördern.
   
-  Menschen in verschiedenen Rollen und in verschiedenen Phasen ihrer Karriere können von dieser grundlegenden Zertifizierung profitieren.Hier einige Beispiele:
-  - IT-Experten, die ein allgemeines Verständnis der Anwendungen zeigen möchten, mit denen sie arbeiten 
+  Menschen in verschiedenen Rollen und in verschiedenen Phasen ihrer Karriere können von dieser grundlegenden Zertifizierung profitieren.Hier einige Beispiele&#58;
+  - IT-Experten, die ein allgemeines Verständnis der Anwendungen zeigen möchten, mit denen sie arbeiten
   - Geschäftsinteressenten und andere Personen, die Dynamics 365 kennen und ihre Fähigkeiten und Erfahrungen validieren möchten
   - Entwickler, die ihr Verständnis für Geschäftsabläufe und CRM hervorheben möchten
-  - Studenten, Absolventen und Personen, die ihre Karriere ändern und die Dynamics 365-Kundenbindungsfunktionen nutzen möchten, um auf die nächste Ebene zu gelangen
-  
-  <div><br/><strong>Hinweis: Diese Zertifizierung wird im Februar 2021 verfügbar sein.</strong></div>
-subTitle: 'Diese Zertifizierung wird im Februar 2021 verfügbar sein. Wenn Sie mit Geschäftsabläufen sowie Kundenbeziehungsmanagement (CRM) vertraut sind und über IT-Kenntnisse verfügen – enweder allgemein oder durch Berufserfahrung – nutzen Sie diese Zertifizierung, um diese Fähigkeiten hervorzuheben. Überprüfen Sie, ob Sie die Kundenbindungsfunktionen von Dynamics 365 umfassend kennen, um Ihre Karriere zu fördern.'
+  - Studenten, Absolventen und Personen, die ihre Berufslaufbahn ändern und die Dynamics 365-Kundenbindungsfunktionen optimal nutzen möchten, um auf die nächste Stufe zu gelangen
+subTitle: 'Wenn Sie mit Geschäftsabläufen sowie Kundenbeziehungsmanagement (CRM) vertraut sind und über IT-Kenntnisse verfügen – enweder allgemein oder durch Berufserfahrung – nutzen Sie diese Zertifizierung, um diese Fähigkeiten hervorzuheben. Überprüfen Sie, ob Sie die Kundenbindungsfunktionen von Dynamics 365 umfassend kennen, um Ihre Karriere zu fördern.'
 levels:
 - beginner
 skills:
-- Beschreiben Sie Dynamics 365 Marketing 
-- Beschreiben Sie Dynamics 365 Sales 
-- Beschreiben Sie Dynamics 365-Customer Service 
+- Beschreiben Sie Dynamics 365 Marketing
+- Beschreiben Sie Dynamics 365 Sales
+- Beschreiben Sie Dynamics 365-Customer Service
 - Beschreiben Sie Dynamics 365-Field Service
 - Beschreiben Sie Projektabläufe
-- Beschreiben Sie gemeinsam genutzte Funktionen 
+- Beschreiben Sie gemeinsam genutzte Funktionen
 roles:
 - business-owner
 - business-user
@@ -34,6 +32,14 @@ type: fundamentals
 products: 
 - dynamics-365
 - dynamics-customer-engagement
+courses:
+- uid: course.mb-910t00
+paths:
+- uid: learn.wwl.explore-microsoft-dynamics-365-marketing
+- uid: learn.wwl.explore-microsoft-dynamics-365-sales
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIew
 exams:
 - uid: exam.mb-910
@@ -41,9 +47,15 @@ resources:
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAmVj
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Zertifizierungslernpfad
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
 - title: Prüfungswiederholung
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
