--- a/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
+++ b/learn-certs-pr/d365-fundamentals-finance-and-operations-apps-erp/index.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Dynamics 365 Fundamentals Finance and Operations Apps (ERP)'
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Fundamentals Finance and Operations Apps (ERP)'
-  description: 'Diese Zertifizierung wird im Februar 2021 verfügbar sein. Wenn Sie einen umfassenden Einblick in die ERP-Funktionen (Enterprise Resource Planning) von Dynamics 365 haben und die Grundlagen der Integration von Finanz- und Betriebsanwendungen in das gesamte Microsoft-Ökosystem kennen, ist diese Zertifizierung genau das Richtige für Sie. '
+  description: 'Wenn Sie einen umfassenden Einblick in die ERP-Funktionen (Enterprise Resource Planning) von Dynamics 365 haben und die Grundlagen der Integration von Finanz- und Betriebsanwendungen in das gesamte Microsoft-Ökosystem kennen, ist diese Zertifizierung genau das Richtige für Sie.'
 uid: certification.d365-fundamentals-finance-and-operations-apps-erp
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
@@ -10,25 +10,22 @@ summary: |-
   
   Personen, die mit Geschäftsabläufen vertraut sind, ein grundlegendes Verständnis von Finanzgrundsätzen haben und mit Informationstechnologie vertraut sind — entweder allgemein oder durch Berufserfahrung —, können diese Zertifizierung verwenden, um diese Fähigkeiten zu validieren und mit ihrer Hilfe Karrieretüren zu öffnen.
   
-  Diese grundlegende Zertifizierung kann von Menschen in verschiedenen Phasen ihrer Karriere auf vielfältige Weise verwendet werden.Hier einige Beispiele:
+  Diese grundlegende Zertifizierung kann von Menschen in verschiedenen Phasen ihrer Karriere auf vielfältige Weise verwendet werden.Hier einige Beispiele&#58;
   - IT-Experten, die ihr umfassendes Verständnis der Anwendungen hervorheben möchten, mit denen sie arbeiten
   - Technische Fachleute und Entscheidungsträger in Unternehmen, die untersuchen, wie sich die Dynamics 365-Funktionalität in die von ihnen verwendeten Apps integrieren lässt
   - Geschäftsinteressenten und andere Personen, die Dynamics 365 verwenden und nachweisen möchten, dass sie die Grundlagen der Plattform verstehen
   - Entwickler, die ein tieferes Verständnis für Geschäftsabläufe, Finanzen und ERP zeigen möchten
   - Studenten, Absolventen und Personen, die ihre Karriere ändern und Dynamics 365-Apps für Finanzen und Betrieb nutzen möchten, um auf die nächste Ebene zu gelangen
-  
-  <div><br/><strong>Hinweis: Diese Zertifizierung wird im Februar 2021 verfügbar sein.</strong></div>
-subTitle: 'Diese Zertifizierung wird im Februar 2021 verfügbar sein. Wenn Sie einen umfassenden Einblick in die ERP-Funktionen (Enterprise Resource Planning) von Dynamics 365 haben und die Grundlagen der Integration von Finanz- und Betriebsanwendungen in das gesamte Microsoft-Ökosystem kennen, ist diese Zertifizierung genau das Richtige für Sie. '
+subTitle: 'Wenn Sie einen umfassenden Einblick in die ERP-Funktionen (Enterprise Resource Planning) von Dynamics 365 haben und die Grundlagen der Integration von Finanz- und Betriebsanwendungen in das gesamte Microsoft-Ökosystem kennen, ist diese Zertifizierung genau das Richtige für Sie.'
 levels:
 - beginner
 skills:
-- Beschreiben Sie Dynamics 365 Supply Chain Management 
-- Beschreiben Sie Dynamics Finance 
-- Beschreiben Sie Dynamics 365 Commerce 
-- Beschreiben Sie Dynamics 365 Human Resources 
-- Beschreiben Sie Projektabläufe 
-- Beschreiben Sie Dynamics 365 Business Central
-- Beschreiben Sie gemeinsam genutzte Funktionen 
+- Beschreiben Sie Dynamics 365 Supply Chain Management
+- Beschreiben Sie Dynamics Finance
+- Beschreiben Sie Dynamics 365 Commerce
+- Beschreiben Sie Dynamics 365 Human Resources
+- Beschreiben Sie Projektabläufe
+- Beschreiben Sie gemeinsam genutzte Funktionen
 roles:
 - business-owner
 - business-user
@@ -38,6 +35,12 @@ type: fundamentals
 products: 
 - dynamics-365
 - dynamics-finance-operations
+paths:
+- uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
+- uid: learn.wwl.explore-microsoft-dynamics-365-finance
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-commerce
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-human-resources
+- uid: learn.wwl.explore-microsoft-dynamics-365-project-operations-erp
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JKOU
 exams:
 - uid: exam.mb-920
@@ -45,9 +48,15 @@ resources:
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CcQL
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über Schritte zur Zertifizierung und die verfügbaren Ressourcen, die Sie bei der Vorbereitung unterstützen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAWQX
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+- title: Zertifizierungslernpfad
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ
 - title: Prüfungswiederholung
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
