--- a/learn-certs-pr/exams/pl-600.yml
+++ b/learn-certs-pr/exams/pl-600.yml
@@ -12,10 +12,11 @@ summary: |-
   
   Lösungsarchitekten verfügen über Erfahrung in verschiedenen funktionalen und technischen Disziplinen der Power Platform. Lösungsarchitekten sollten in der Lage sein, Designentscheidungen in den Bereichen Entwicklung, Konfiguration, Integration, Infrastruktur, Sicherheit, Verfügbarkeit, Speicherung und Änderungsmanagement zu erleichtern. Diese Funktion gleicht die Geschäftsanforderungen eines Projekts aus und erfüllt gleichzeitig funktionale und nicht-funktionale Anforderungen.
   
-  <div><br/><font color='red'><strong>Hinweis&#58; Diese Prüfung wird im März 2021 verfügbar sein.</strong></font></div>
-subTitle: "Diese Prüfung wird im März 2021 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Lösungskonzeption und Anforderungsanalyse durchführen, eine Lösung entwickeln und implementieren."
+  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
+subTitle: "Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Lösungskonzeption und Anforderungsanalyse durchführen, eine Lösung entwickeln und implementieren."
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4M56D
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=PL-600&examname=Exam%20PL-600:%20Microsoft%20Power%20Platform%20Solution%20Architect&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-600
 locales:
 - en
 levels:
