--- a/learn-certs-pr/power-platform-solution-architect-expert/index.yml
+++ b/learn-certs-pr/power-platform-solution-architect-expert/index.yml
@@ -2,7 +2,7 @@
 title: 'Microsoft Certified: Power Platform Solution Architect Expert'
 metadata:
   title: 'Microsoft Certified: Power Platform Solution Architect Expert'
-  description: Diese Zertifizierung wird im März 2021 verfügbar sein. Power Platform Solution Architect Experts arbeiten mit Interessenvertretern zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihres Unternehmens auswirken.
+  description: Power Platform Solution Architect Experts arbeiten mit Interessenvertretern zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihres Unternehmens auswirken. Sie verfügen über funktionale und technische Kenntnisse in Bezug auf Power-Power Platform, Dynamics 365-Apps zur Kundenbindung, verwandte Microsoft cloud-Lösungen und Technologien von Drittanbietern.
 uid: certification.power-platform-solution-architect-expert
 iconUrl: /media/learn/certification/badges/microsoft-certified-expert-badge.svg
 summary: |-
@@ -14,9 +14,7 @@ summary: |-
   - Arbeiten Sie als Lösungsarchitekt (oder schauen Sie einem über die Schulter) an Power Platform-Projekten.
   - Melden Sie sich für einen von einem Dozenten geleiteten Schulungskurs an.
   - Untersuchen Sie die verfügbaren Lernpfade in [Microsoft Learn](/learn/paths/become-solution-architect/).
-  
-  <div><font color='red'><strong>Hinweis&#58; Diese Zertifizierung wird im März 2021 verfügbar sein.</strong></font></div>
-subTitle: Diese Zertifizierung wird im März 2021 verfügbar sein. Power Platform Solution Architect Experts arbeiten mit Interessenvertretern zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihres Unternehmens auswirken. Sie verfügen über funktionale und technische Kenntnisse in Bezug auf Power-Power Platform, Dynamics 365-Apps zur Kundenbindung, verwandte Microsoft cloud-Lösungen und Technologien von Drittanbietern.
+subTitle: Power Platform Solution Architect Experts arbeiten mit Interessenvertretern zusammen und konzentrieren sich auf Lösungen, die sich auf die allgemeinen geschäftlichen und technischen Anforderungen ihres Unternehmens auswirken. Sie verfügen über funktionale und technische Kenntnisse in Bezug auf Power-Power Platform, Dynamics 365-Apps zur Kundenbindung, verwandte Microsoft cloud-Lösungen und Technologien von Drittanbietern.
 levels:
 - advanced
 skills:
