--- a/learn-certs-pr/azure-stack-hub-operator/index.yml
+++ b/learn-certs-pr/azure-stack-hub-operator/index.yml
@@ -7,7 +7,7 @@ uid: certification.azure-stack-hub-operator
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   Kandidaten für die Azure Stack Hub Operator Associate-Zertifizierung sind Azure-Administratoren oder Azure Stack Hub-Betreiber, die Endbenutzern oder Kunden mi Hilfe von Azure Stack Hub Cloud-Services aus ihrem eigenen Rechenzentrum bereitstellen.
-
+  
   Ihre Aufgabe besteht darin, die Azure Stack Hub-Infrastruktur zu planen, bereitzustellen, zu verpacken, zu aktualisieren und zu warten. Sie bieten auch hybride Cloud-Ressourcen und angeforderte Services an und verwalten die Infrastruktur-als-Service (IaaS) und die Plattform-als- Service (PaaS).
   
   Azure Security-Engineers sind häufig Teil eines größeren Teams, das sich mit Cloud-basierten Verwaltungs- und Sicherheitsumgebungen oder Hybridumgebungen als Teil einer kompletten Infrastruktur befasst.
@@ -33,6 +33,8 @@ products:
 - azure-app-service
 - azure-event-hubs
 - azure-active-directory
+courses:
+- uid: course.az-600t00
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4LyWu
 exams:
 - uid: exam.az-600
