--- a/learn-certs-pr/exams/az-200.yml
+++ b/learn-certs-pr/exams/az-200.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Examination
-title: Microsoft Azure Developer Core Solutions (beta)
+title: Microsoft Azure Developer Core Solutions
 metadata:
-  title: 'Prüfung AZ-200: Microsoft Azure Developer Core Solutions (beta)'
-  description: 'Prüfung AZ-200: Microsoft Azure Developer Core Solutions (beta)'
+  title: 'Exam AZ-200: Microsoft Azure Developer Core Solutions'
+  description: 'Exam AZ-200: Microsoft Azure Developer Core Solutions'
 uid: exam.az-200
 displayName: AZ-200
 summary: "<div><strong>DIESE PRÜFUNG WURDE AM 03. JANUAR 2019 EINGESTELLT. Hinweis&#58; Prüfungen werden um 23:59 Uhr Central Standard Time</strong></div>\n<br/>   \nKandidaten für diese Prüfung sind Azure Entwickler, die Cloud-Lösungen wie Anwendungen und Services entwerfen und bauen. Sie nehmen an allen Phasen der Entwicklung teil, vom Lösungsdesign über die Entwicklung und Bereitstellung bis hin zu Test und Wartung. Sie arbeiten mit Cloud Solution Architects, Cloud DBAs, Cloud Administratoren und Clients zusammen, um die Lösung zu implementieren.\n\nDie Kandidaten sollten in der Entwicklung von Anwendungen und Diensten unter Verwendung von Azure-Tools und -Technologien, einschließlich Speicherung, Sicherheit, Berechnung und Kommunikation, versiert sein.\n\nDie Kandidaten müssen über mindestens ein Jahr Erfahrung in der Entwicklung skalierbarer Lösungen in allen Phasen der Softwareentwicklung verfügen und über Kenntnisse in mindestens einer Cloud-gestützten Programmiersprache verfügen."
