--- a/learn-certs-pr/exams/az-600.yml
+++ b/learn-certs-pr/exams/az-600.yml
@@ -1,22 +1,20 @@
 ### YamlMime:Examination
-title: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (beta)
+title: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub
 metadata:
-  title: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (beta)'
-  description: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub (beta)'
+  title: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub'
+  description: 'Exam AZ-600: Configuring and Operating a Hybrid Cloud with Microsoft Azure Stack Hub'
 uid: exam.az-600
 displayName: AZ-600
 summary: |-
   Kandidaten für die Prüfung AZ-600 sind Azure administrators oder Azure Stack Hub-Betreiber, die Endbenutzern oder Kunden cloud -Services aus ihrem eigenen Rechenzentrum mit Hilfe von Azure Stack Hub bereitstellen.
   
   Kandidaten für diese Prüfung sollten über umfangreiche Erfahrung in der Verwaltung und dem Betrieb von Azure Stack Hub-Umgebungen verfügen. Sie sollten ein umfassendes Verständnis von Azure haben und über Kenntnisse in den Bereichen Virtualisierung, Netzwerk und Identitätsmanagement verfügen. Sie müssen verstehen, wie Azure Stack Hub DevOps-Prozesse und das hybride Entwicklungsmodellsteh ermöglicht.
-  
-  <div><strong><br/>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. Erfahren Sie mehr <a href="/learn/certifications/certification-exams#participating-in-beta-exams">über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></div>
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, folgende technische Aufgaben zu erfüllen: Serviceleistungen erbringen; Rechenzentrumsintegration implementieren; Identität und Zugang verwalten und Infrastruktur verwalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Lwq9
 providers:
   - providerType: pearson-vue
-    examUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-600&examname=Exam%20AZ-600:%20Configuring%20and%20Operating%20a%20Hybrid%20Cloud%20with%20Microsoft%20Azure%20Stack%20Hub%20(beta)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-600
+    examUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=AZ-600&examname=Exam%20AZ-600:%20Configuring%20and%20Operating%20a%20Hybrid%20Cloud%20with%20Microsoft%20Azure%20Stack%20Hub&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-600
 locales:
 - en
 levels:
@@ -37,6 +35,8 @@ products:
 - azure-app-service
 - azure-event-hubs
 - azure-active-directory
+courses:
+- uid: course.az-600t00
 relatedCertifications:
 - related:
     uid: certification.azure-stack-hub-operator
