--- a/learn-certs-pr/exams/dp-203.yml
+++ b/learn-certs-pr/exams/dp-203.yml
@@ -10,10 +10,11 @@ summary: |-
   
   Kandidaten für die Prüfung DP-203&#58; Data Engineering on Microsoft Azure müssen über fundierte Kenntnisse in Datenverarbeitungssprachen wie SQL, Python oder Scala verfügen und die Struktur von Parallelverarbeitung und Datenarchitektur verstehen.
   
-  <div><br/><font color='red'><strong>Hinweis&#58; Diese Prüfung wird am 23. Februar 2021 verfügbar sein.</strong></font></div>
-subTitle: 'Diese Prüfung wird am 23. Februar 2021 verfügbar sein. Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwerfen und Implementieren von Datenspeicherung; Datenverarbeitung entwerfen und entwickeln; Entwurf und Implementieren von Datensicherheitsmaßnahmen und Überwachung und Optimierung der Datenspeicherung und -verarbeitung.'
+  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu erfüllen: Entwerfen und Implementieren von Datenspeicherung; Datenverarbeitung entwerfen und entwickeln; Entwurf und Implementieren von Datensicherheitsmaßnahmen und Überwachung und Optimierung der Datenspeicherung und -verarbeitung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYT
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=DP-203&examname=Exam%20DP-203:%20Data%20Engineering%20on%20Microsoft%20Azure&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fdp-203
 locales:
 - en
 levels:
@@ -32,10 +33,24 @@ products:
 - azure-event-hubs
 - azure-data-lake
 - azure-databricks
+paths:
+- uid: learn.data-ai.azure-for-the-data-engineer
+- uid: learn.store-data-in-azure
+- uid: learn.wwl.data-integration-scale-azure-data-factory
+- uid: learn.wwl.realize-integrated-analytical-solutions-with-azure-synapse-analytics
+- uid: learn.wwl.work-with-data-warehouses-using-azure-synapse-analytics
+- uid: learn.wwl.perform-data-engineering-with-azure-synapse-apache-spark-pools
+- uid: learn.wwl.work-with-hybrid-transactional-analytical-processing-solutions
+- uid: learn.wwl.data-engineer-azure-databricks
+- uid: learn.data-ai.data-processing-with-azure-adls
+- uid: learn.data-ai.implement-data-streaming-with-asa
 relatedCertifications:
 - related:
     uid: certification.azure-data-engineer
 resources:
+- title: Der Weg zur Zertifizierung
+  description: Informieren Sie sich über die Schritte zur Zertifizierung als Azure Data Engineer Associate und über verfügbare Ressourcen, die Ihnen bei der Vorbereitung helfen können.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWxODZ
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
