--- a/learn-certs-pr/exams/mb-910.yml
+++ b/learn-certs-pr/exams/mb-910.yml
@@ -8,19 +8,20 @@ displayName: MB-910
 summary: |-
   Diese Prüfung behandelt die Funktionen und Fähigkeiten von Microsoft Dynamics 365-Apps zur Kundenbindung.
   
-  Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem Informationstechnologie (IT)-Umfeld verfügen.Sie sollten auch ein grundlegendes Verständnis der Prinzipien der Kundenbindung und des Geschäftsbetriebs haben.
+  Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem Informationstechnologie (IT)-Umfeld verfügen. Sie sollten auch ein grundlegendes Verständnis der Prinzipien der Kundenbindung und des Geschäftsbetriebs haben.
   
-  <div><br/><strong>Hinweis&#58; Diese Prüfung wird im Februar 2021 verfügbar sein.</strong></div>
-subTitle: ‚Diese Prüfung wird im Februar 2021 verfügbar sein.Diese Prüfung misst Ihre Fähigkeit, Folgendes zu beschreiben:Dynamics 365 Marketing; Dynamics 365 Sales; Dynamics 365-Kundenservice; Dynamics 365-Außendienst; Projektbetrieb und gemeinsame Funktionen.'
+  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, Folgendes zu beschreiben: Dynamics 365 Marketing; Dynamics 365 Sales; Dynamics 365-Kundenservice; Dynamics 365-Außendienst; Projektbetrieb und gemeinsame Funktionen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JIev
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-910&examname=Exam%20MB-910:%20Microsoft%20Dynamics%20365%20Fundamentals%20Customer%20Engagement%20Apps%20(CRM)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-910
 locales:
 - en
 levels:
 - beginner
 skills:
 - Beschreiben Sie Dynamics 365 Marketing (10-15%)
-- Beschreiben Sie Dynamics 365 Sales (15-20%).
+- Beschreiben Sie Dynamics 365 Sales (15-20%)
 - Beschreiben Sie Dynamics 365-Customer Service (15-20%)
 - Beschreiben Sie Dynamics 365-Field Service (15-20%)
 - Beschreiben Sie Projektabläufe (15-20%)
@@ -30,13 +31,24 @@ roles:
 - business-user
 - functional-consultant
 - student
-products: 
+products:
 - dynamics-365
 - dynamics-customer-engagement
+courses:
+- uid: course.mb-910t00
+paths:
+- uid: learn.wwl.explore-microsoft-dynamics-365-marketing
+- uid: learn.wwl.explore-microsoft-dynamics-365-sales
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-customer-service
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-field-service
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-project-operations-crm
 relatedCertifications:
 - related:
     uid: certification.d365-fundamentals-customer-engagement-apps-crm
 resources:
+- title: Zertifizierungslernpfad
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAs3I
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
