--- a/learn-certs-pr/exams/mb-920.yml
+++ b/learn-certs-pr/exams/mb-920.yml
@@ -8,36 +8,45 @@ displayName: MB-920
 summary: |-
   Diese Prüfung behandelt die Funktionen und Fähigkeiten von Microsoft Dynamics 365-Apps für Finanzen und Betrieb.
   
-  Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem Informationstechnologie (IT)-Umfeld verfügen.Sie sollten auch ein grundlegendes Verständnis der Finanzprinzipien der und des Geschäftsbetriebs haben.
+  Kandidaten für diese Prüfung sollten über allgemeine Kenntnisse oder einschlägige Berufserfahrung in einem Informationstechnologie (IT)-Umfeld verfügen. Sie sollten auch ein grundlegendes Verständnis der Finanzprinzipien der und des Geschäftsbetriebs haben.
   
-  <div><br/><strong>Hinweis&#58; Diese Prüfung wird im Februar 2021 verfügbar sein.</strong></div>
-subTitle: ‚Diese Prüfung wird im Februar 2021 verfügbar sein.Diese Prüfung misst Ihre Fähigkeit, Folgendes zu beschreiben:Dynamics 365 Supply Chain Management; Dynamics Finance; Dynamics 365 Commerce; Dynamics 365 Human Resources; Projektbetrieb; Dynamics 365 Business Central und gemeinsam genutzte Funktionen.'
+  <div><br/><font color='red'><strong>Beta-Prüfungen werden nicht sofort bewertet, da wir Daten zur Qualität der Fragen und der Prüfung sammeln. <a href="/learn/certifications/certification-exams#participating-in-beta-exams">Erfahren Sie mehr über den Wert und die Bedeutung von Beta-Prüfungen</a>.</strong></font></div>
+subTitle: 'Diese Prüfung misst Ihre Fähigkeit, Folgendes zu beschreiben: Dynamics 365 Supply Chain Management, Dynamics Finance, Dynamics 365 Commerce, Dynamics 365 Human Resources, Projektabläufe und gemeinsame Funktionen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4JFBT
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-920&examname=Exam%20MB-920:%20Microsoft%20Dynamics%20365%20Fundamentals%20Finance%20and%20Operations%20Apps%20(ERP)&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-920
 locales:
 - en
 levels:
 - beginner
 skills:
 - Beschreiben Sie Dynamics 365 Supply Chain Management (25-30%)
-- Beschreiben Sie Dynamics Finance (25-30%)
+- Beschreiben Sie Dynamics Finance (20-25%)
 - Beschreiben Sie Dynamics 365 Commerce (10-15%)
 - Beschreiben Sie Dynamics 365 Human Resources (5-10%)
 - Beschreiben Sie Projektabläufe (10-15%)
-- Beschreiben Sie Dynamics 365 Business Central (5-10%)
 - Beschreiben Sie gemeinsam genutzte Funktionen (10-15%)
 roles:
 - business-owner
 - business-user
 - functional-consultant
 - student
-products: 
+products:
 - dynamics-365
 - dynamics-finance-operations
+paths:
+- uid: learn.wwl.explore-microsoft-dynamics-365-supply-chain-management
+- uid: learn.wwl.explore-microsoft-dynamics-365-finance
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-commerce
+- uid: learn.wwl.learn-fundamentals-microsoft-dynamics-365-human-resources
+- uid: learn.wwl.explore-microsoft-dynamics-365-project-operations-erp
 relatedCertifications:
 - related:
     uid: certification.d365-fundamentals-finance-and-operations-apps-erp
 resources:
+- title: Zertifizierungslernpfad
+  description: Empfohlene Schulungsressourcen, die Ihnen helfen, sich auf die erforderlichen Prüfungen vorzubereiten und Ihre Zertifizierung zu erhalten.
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWAFfQ
 - title: Informieren Sie sich über die Zertifizierungen
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
   href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
